# jnd-dados-btcamp-cloud-aula5

./: .pre-commit-config.yaml  README.md  pyproject.toml
apps/: __main__.py
